--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/">
 
+</head>
+<body>
+    <div>
+        <div>
+
+        </div>
+    </div>
+    
+    <h1>
+        Title for the website
+    </h1>
+
+    <p>
+        Text for the website 
+
+    </p>
+    
+</body>
+</html>
